GUAC-1170: Fix spacing of sections on resize - nothing should ever wrap.

--- a/guacamole/src/main/webapp/app/osk/styles/osk.css
+++ b/guacamole/src/main/webapp/app/osk/styles/osk.css
@@ -36,6 +36,12 @@
     vertical-align: middle;
 }
 
+.guac-keyboard,
+.guac-keyboard * {
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .guac-keyboard .guac-keyboard-key-container {
     display: inline-block;
     margin: 0.05em;
